make-a-wish-salesforce/src/objects/Wish_Affiliation__c.object
<CustomObject>
    <description>A junction object between the Wish (Case) and Contacts to track individuals related to a particular Wish.</description>
    <fields>
        <fullName>Added_Through_Interview_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine whether the volunteer has selected to add this Wish Affiliation during the wish design interview flow.  Not intended to be displayed to users.</description>
        <label>Added Through Interview Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Best_Medical_Contact__c</fullName>
        <description>Displays TRUE if the Best Medical contact is ticked TRUE on the related Relationship record</description>
        <formula>Relationship__r.Best_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Best Medical Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>A Wish Affiliation's related Contact.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Wish Affiliations</relationshipLabel>
        <relationshipName>Wish_Affiliations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Created_Via_Lead_Convert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the Wish Affiliation was generated from the Lead Convert process.</description>
        <label>Created Via Lead Convert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Participant_Removed__c</fullName>
        <description>Date stamped via a workflow rule when the Affiliation Type is changed from Approved or Requested Participant to another value.  Used for reporting purposes as detail objects cannot show reports on field history tracking.</description>
        <inlineHelpText>The last date the participant was changed from either Approved or Requested to another value.</inlineHelpText>
        <label>Date Participant Removed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>Formula used for populating data into templates or reports.</description>
        <formula>Contact__r.Birthdate</formula>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <description>Captures additional details related to Wish Affiliation records.</description>
        <label>Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <description>Displays the Full Name of the Wish Affiliations Primary Contact and a Hyperlink link to their Salesforce record.</description>
        <formula>HYPERLINK("/" &amp; Contact__r.Id,  Contact__r.FirstName &amp; " " &amp;  Contact__r.LastName , "_self")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_Treatment_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A Wish Affiliation's related "Health Treatment Facility" account.</description>
        <label>Hospital Treatment Facility</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Account record type must be of the type "Hospital Treatment Facility"</errorMessage>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Hospital Treatment Facility</value>
            </filterItems>
            <infoMessage>The Account record type must be of the type "Hospital Treatment Facility"</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Wish Affiliations</relationshipLabel>
        <relationshipName>Wish_Affiliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hide_from_Restricted_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used with custom setting Wish_Affiliation_Security_Settings field Restrict_Access to control which Wish Affiliation records are visible to users/profiles with Restrict_Access.  The primary use case is Volunteers.  The long term goal is to implement Apex Sharing for Contacts based on the Wish Affiliation, and this field can be leveraged for that also.</description>
        <inlineHelpText>Selecting this option will hide this Wish Affiliation from restricted users, such as Volunteers.</inlineHelpText>
        <label>Hide from Restricted Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_Needs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that a wish participant requires medical needs.</description>
        <label>Medical Needs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_Professional_Status__c</fullName>
        <description>Uses the status of a Medical Professional's Affiliation to the chapter to determine their status.</description>
        <formula>Contact__r.Medical_Professional_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>To change the status, create or update this contact's related 'Organization Affiliation' records (on the contact) to a status of 'Active' or 'Inactive'. Note: this is the record or records related to the Chapter not a health treatment facility.</inlineHelpText>
        <label>Medical Professional Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Wish_Affiliation__c</fullName>
        <description>True when the user viewing the record is also the related Wish Case's Owner</description>
        <formula>IF($User.Id = Wish__r.OwnerId, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Wish Affiliation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Comped__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to denote when a contact has decided to participate in the wish at their own expense ie Make a Wish is not 'Comp'ing their expenses.</description>
        <label>Non-Comped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Legal_Guardian__c</fullName>
        <description>Displays the Parent Legal Guardian status of the related Relationship record</description>
        <formula>Relationship__r.Parent_Legal_Guardian__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Legal Guardian</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Participant_Turning_18__c</fullName>
        <description>The date when this contact turns 18. Used to create related Wish Required Signatures by Batch class</description>
        <formula>ADDMONTHS( Contact__r.Birthdate ,216)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participant Turning 18</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Qualifying_Medical_Team_Member__c</fullName>
        <description>True if the related relationship record's 'Qualifying Medical Team Member' field is True.</description>
        <formula>Relationship__r.Qualifying_Medical_Professional__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualifying Medical Team Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_Source__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the contact who originated the wish referral.</description>
        <label>Referral Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_To__c</fullName>
        <description>If there is a related relationship record it displays the name of the related contact, and a Hyperlink link to their Salesforce record.</description>
        <formula>HYPERLINK("/" &amp; Relationship__r.npe4__Contact__r.Id,  Relationship__r.npe4__Contact__r.FirstName &amp; " " &amp; Relationship__r.npe4__Contact__r.LastName , "_self")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <description>If linked to an existing relationship record displays the type of relationship</description>
        <formula>Text( Relationship__r.npe4__Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A Wish Affiliation's related Relationship record.</description>
        <label>Relationship</label>
        <referenceTo>npe4__Relationship__c</referenceTo>
        <relationshipLabel>Wish Affiliations</relationshipLabel>
        <relationshipName>Wish_Affiliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Residing_with_Wish_child__c</fullName>
        <description>It will define wish child residing with wish child or not.</description>
        <label>Residing with Wish child</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Clearance_Forms_To__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows the user to designate which Medical Professional should receive medical clearance forms.</description>
        <label>Send Clearance Forms To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Specific_Type__c</fullName>
        <description>Displays a detail wish affiliation type.</description>
        <formula>Text(Wish_Affiliation_Type__c) +  
IF(Parent_Legal_Guardian__c = TRUE || Referral_Source__c = TRUE || Treating_HCP__c = TRUE || Best_Medical_Contact__c = TRUE, " - ","") +
IF(Parent_Legal_Guardian__c = TRUE, "Parent/Guardian ", "") +
IF(Referral_Source__c = TRUE, "Referrer ", "") + 
IF(Treating_HCP__c = TRUE, "Treating ", "") + 
IF(Best_Medical_Contact__c = TRUE, "B.M.C. ", "")</formula>
        <label>Specific Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Recipient__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denoted the participant who should receive the survey following the completion of the wish.</description>
        <inlineHelpText>Note: Only one survey receipt per wish can be selected.  If this contact is selected, any existing survey recipient (for this wish) will be deselected.</inlineHelpText>
        <label>Survey Recipient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Treating_HCP__c</fullName>
        <description>True if the related relationships record's 'Treating Health Care Professional' field is True.</description>
        <formula>Relationship__r.Treating_HCP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Treating Healthcare Provider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Under_18__c</fullName>
        <description>'Yes' if the related contact is less than 18 years old.</description>
        <formula>IF(ISBLANK(Contact__r.Birthdate), "No Birthdate Recorded",
IF(Contact__r.Birthdate &gt; ADDMONTHS(TODAY(),-216), "Yes", "No"))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Under 18 Years of Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validated_in_Interview__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to track whether the information for this Wish Affiliation has been validated as part of the Wish Interview.  Data is leveraged by, and populated by, a custom lightning component and is mapped in custom metadata.</description>
        <label>Validated in Interview</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wish_Affiliation_Type__c</fullName>
        <description>Captures the type/status of the Wish Affiliated contact.</description>
        <label>Wish Affiliation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved Participant</fullName>
                </value>
                <value>
                    <fullName>Requested Participant</fullName>
                </value>
                <value>
                    <fullName>Declined Participant</fullName>
                </value>
                <value>
                    <fullName>Medical Professional</fullName>
                </value>
                <value>
                    <fullName>Guardian of Minor Participant</fullName>
                </value>
                <value>
                    <fullName>Wish Child</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wish__c</fullName>
        <description>The Wish Affiliation's related Wish.</description>
        <label>Wish</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Wish (case) record type must be of the type 'Wish'.</errorMessage>
            <filterItems>
                <field>Case.RecordType.Name</field>
                <operation>equals</operation>
                <value>Wish</value>
            </filterItems>
            <infoMessage>The Wish (Case) record type must be of the type 'Wish'.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Wish Affiliations</relationshipLabel>
        <relationshipName>Wish_Affiliations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Work_Email__c</fullName>
        <description>Displays the related contact's work email address</description>
        <formula>Contact__r.npe01__WorkEmail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <description>Displays the related contact's work phone number</description>
        <formula>Contact__r.npe01__WorkPhone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Phone</label>
        <type>Text</type>
    </fields>
    <label>Wish Affiliation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Added_Through_Interview_Flow__c</columns>
        <columns>Best_Medical_Contact__c</columns>
        <columns>Contact__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Created_Via_Lead_Convert__c</columns>
        <columns>Full_Name__c</columns>
        <columns>Details__c</columns>
        <columns>Related_To__c</columns>
        <columns>Relationship__c</columns>
        <columns>Relationship_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Removed_Participants_My_Wishes</fullName>
        <columns>Wish__c</columns>
        <columns>Contact__c</columns>
        <columns>Relationship_Type__c</columns>
        <columns>Related_To__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wish_Affiliation_Type__c</field>
            <operation>notEqual</operation>
            <value>Approved Participant,Requested Participant,Medical Professional,Wish Child</value>
        </filters>
        <filters>
            <field>My_Wish_Affiliation__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Date_Participant_Removed__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Recent Removed Participants (My Wishes)</label>
    </listViews>
    <listViews>
        <fullName>Request_Participants_My_Wishes</fullName>
        <columns>Wish__c</columns>
        <columns>Contact__c</columns>
        <columns>Relationship_Type__c</columns>
        <columns>Related_To__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wish_Affiliation_Type__c</field>
            <operation>equals</operation>
            <value>Requested Participant</value>
        </filters>
        <filters>
            <field>My_Wish_Affiliation__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Requested Participants (My Wishes)</label>
    </listViews>
    <nameField>
        <displayFormat>WA-{00000}</displayFormat>
        <label>Wish Affiliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wish Affiliations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Med_Profs_must_be_linked_to_a_HTF_Acc</fullName>
        <active>true</active>
        <description>All Medical Professionals must be linked to a HTF Account before you can save the record.</description>
        <errorConditionFormula>Relationship_Type__c = "Medical Professional"
&amp;&amp;
ISBLANK(Health_Treatment_Facility__c)
&amp;&amp;
Created_Via_Lead_Convert__c = false</errorConditionFormula>
        <errorDisplayField>Health_Treatment_Facility__c</errorDisplayField>
        <errorMessage>All Medical Professionals must be linked to a Health Treatment Facility Account.  Please populate the HTF Account lookup field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Non_Med_Profs_cant_have_a_HTF_Acc</fullName>
        <active>true</active>
        <description>Only Relationship Types of 'Medical Professional' can be linked to a HTF Account</description>
        <errorConditionFormula>Relationship_Type__c != "Medical Professional"
&amp;&amp;
ISBLANK(Health_Treatment_Facility__c )=FALSE</errorConditionFormula>
        <errorMessage>Only Medical Professionals can be linked to a Health Treatment Facility Account.  Please keep the HTF Account lookup blank, or update the Relationship Type to 'Medical Professional'.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Wish_Child_Cannot_Be_Hidden</fullName>
        <active>true</active>
        <description>The Wish Child's Wish Affiliation cannot be set to "Hide from Restricted Users" as much functionality is dependent on users being able to see the wish child and their data.</description>
        <errorConditionFormula>ISPICKVAL( Wish_Affiliation_Type__c , "Wish Child")
&amp;&amp;
Hide_from_Restricted_Users__c</errorConditionFormula>
        <errorDisplayField>Hide_from_Restricted_Users__c</errorDisplayField>
        <errorMessage>Hide From Restricted Users cannot be selected for the Wish Child.</errorMessage>
    </validationRules>
</CustomObject>